--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,6 +14,17 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: docker login
+      run: |
+        docker login -u $DOCKER_USER -p $DOCKER_PASSWORD
+    - name: Get current date
+      id: date
+      run: |
+        echo "::set-output name=date::$(date +'%Y-%m-%d--%M-%S')"
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: |
+        docker build . --file Dockerfile --tag $sridhanush1307/flask_hello:${{ steps.date.outputs.date }}
+    - name: Push to Dockerhub
+      run: |
+        docker push $sridhanush1307/flask_hello:${{ steps.date.outputs.date }}
       
