--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,5 +28,5 @@ jobs:
       run: docker build . --file Dockerfile --tag sridhanush1307/flask_hello:${{ steps.date.outputs.date }}
     - name: Push to Dockerhub
       run: |
-        docker push $sridhanush1307/flask_hello:${{ steps.date.outputs.date }}
+        docker push sridhanush1307/flask_hello:${{ steps.date.outputs.date }}
       
